[gd_scene load_steps=2 format=3 uid="uid://com21221s2asv"]

[ext_resource type="Script" uid="uid://bjrkqd5lbiy71" path="res://scripts/Game.gd" id="1"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="WoodCountLabel" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.3
anchor_bottom = 0.12
text = "Wood: 0"

[node name="ChopButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.3
anchor_bottom = 0.22
text = "Chop!"

[node name="UpgradeButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.05
anchor_top = 0.25
anchor_right = 0.3
anchor_bottom = 0.32
text = "Upgrade Axe"

[node name="UnlockButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.05
anchor_top = 0.35
anchor_right = 0.3
anchor_bottom = 0.42
text = "Unlock Magical Wood"

[node name="PassiveChopBar" type="ProgressBar" parent="."]
layout_mode = 0
anchor_left = 0.05
anchor_top = 0.45
anchor_right = 0.3
anchor_bottom = 0.52
max_value = 1.0
